# Validation_Tool

./: .gitignore  Azure_load_data.py  Local_load_data.py  README.md  app.py  app.yaml  config.yaml  config_databricks.py  config_local.py  environment.yml  load_data.py  local_environment.yaml  pyproject.toml  requirements.txt  test.py  validation_plot_generator.py
.github/workflows/: azure_dev_validation-tool.yml  dev_validation-tool(dev).yml  main_calibviz.yml  main_validation-tool.yml  validation_sp_update_kng_validation-tool(dev).yml
assets/: dashExtensions_default.js
data/: Joined_hwy.geojson  Joined_hwy_all.geojson  vis_worksheet.xlsx
local_archive/: app.py
