[project]
name = "validation-tool"
version = "1.0.0"
description = "SANDAG Validation Tool - A Python-Dash web application for validating travel model outputs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "blinker==1.9.0",
    "cachelib==0.13.0",
    "cachetools==6.2.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "colorcet==3.1.0",
    "dash==3.0.4",
    "dash-bootstrap-components==2.0.3",
    "dash-extensions==2.0.4",
    "dash-leaflet==1.1.3",
    "dash-svg==0.0.12",
    "databricks-sdk==0.67.0",
    "databricks-sql-connector==4.0.3",
    "dataclass-wizard==0.35.0",
    "dotenv==0.9.9",
    "editorconfig==0.17.0",
    "et-xmlfile==2.0.0",
    "flask==3.0.3",
    "flask-caching==2.3.1",
    "geobuf==2.0.0",
    "geopandas==1.0.1",
    "google-auth==2.41.0",
    "greenlet==3.2.2",
    "gunicorn==23.0.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsbeautifier==1.15.4",
    "lz4==4.4.4",
    "markupsafe==3.0.2",
    "more-itertools==10.7.0",
    "narwhals==1.40.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "oauthlib==3.2.2",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "plotly==5.21.0",
    "protobuf==6.31.0",
    "pyarrow==16.1.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pyogrio==0.11.0",
    "pyproj==3.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "retrying==1.3.4",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "tenacity==9.1.2",
    "thrift==0.20.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "werkzeug==3.0.6",
    "zipp==3.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
